syntax = "proto3"; // describe the version of proto

option java_multiple_files = true; // It ensures splitting the service request & response file into different files since by default code generation will put all the generated code into a single file which will make clumsy
option java_package = "billing"; // code generation will put all the generated code into a single package

service BillingService{
  rpc CreateBillingAccount(BillingRequest) returns(BillingResponse);
}

message BillingRequest{
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse{
  string accountId = 1;
  string status = 2;
}